# doc_compare

./: .gitignore  CLAUDE.md  collate_from_statement.py  doc_comparison.py  doc_comparison_2.py  extract_definitions.py  extract_multilingual.py  extract_multilingual_definitions.py  extract_multilingual_sections.py  extract_multilingual_wllm.py  extract_section_wllm.py  extract_strikes.py  form_check.py  generate_mock_pdf.py  generate_mock_proposal.py  main.py  parse_schedule.py  parse_schedule_2.py  parse_schedules.py  parse_schedules_2.py  parse_sections.py  parse_sections_2.py  parse_sections_3.py  pyproject.toml  section_extraction_workflow.drawio  section_index.py  section_index_2.py  temp.py
output/: comparison_report_1.md
references/: architecture_slides.pptx  architecture_writeup.docx
tests/: test_doc_comparison_2.py  test_extract_definitions.py  test_form_check.py  test_parse_schedule.py  test_parse_schedule_2.py  test_parse_schedules.py  test_parse_schedules_2.py  test_parse_sections.py  test_parse_sections_2.py  test_parse_sections_3.py  test_section_index.py  test_section_index_2.py
